# Crzgames_Launcher

./: .env.development  .env.production  .env.staging  .gitignore  .prettierignore  CHANGELOG.md  README.md  app.vue  error.vue  eslint.config.js  nuxt.config.ts  package-lock.json  package.json  prettier.config.js  release-please-config.json  tailwind.config.ts  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build-compile-deploy-production.yml  build-compile-deploy-staging.yml  tests-deploy-release.yml
assets/css/: main.scss
assets/css/modules/: floating-vue.scss  notyf.scss
common/components/buttons/: CrzButton.vue  CrzCheckbox.vue  CrzInput.vue  CrzSquareIconButton.vue
common/components/cards/: CrzGameCard.vue
common/components/icons/: arrows-rotate.vue  book-open.vue  circle-check.vue  circle.vue  ellipsis.vue  title-bar-maximize.vue
common/components/inputs/: CrzSearchBar.vue
common/components/modals/: CrzConfirmModal.vue  CrzModal.vue
common/components/ui/: CrzBadge.vue  CrzCheckbox.vue  CrzIcon.vue  CrzLogo2.vue  CrzPlatformIcon.vue  CrzPlatformsIcons.vue
common/core/loaders/: AuthLoader.ts  GameCarouselLoader.ts  GameLibraryLoader.ts  GameLoader.ts
common/core/models/: FileModel.ts  GameBinaryModel.ts  GameCarouselModel.ts  GameCategoryModel.ts  GameLibraryModel.ts  GameModel.ts  GamePlatformModel.ts  GameServerModel.ts  GameVersionModel.ts  ProductCategoryModel.ts  ProductDiscountModel.ts  ProductModel.ts  UserModel.ts  UserRoleModel.ts
common/core/services/: AuthService.ts  BaseApiService.ts  CloudStorageS3Service.ts  CookieService.ts  GameBinaryService.ts  GameCarouselService.ts  GameLibraryService.ts  GameService.ts  GameVersionService.ts  ProductService.ts
components/buttons/: PlayPauseButton.vue
components/cards/: ActiveDownloadCard.vue  CompleteDownloadCard.vue
components/carousel/: CrzSwiper.vue
components/forms/: DownloadForm.vue  FixGameInstalledInLibraryForm.vue  LoginForm.vue  PlayGameNotFoundExecutableForm.vue
components/menus/: EllipsisDropdownMenu.vue  UserMenu.vue
components/modals/: DownloadModal.vue  FixGameInstalledInLibraryModal.vue  PlayGameNotFoundExecutableModal.vue
components/navigations/: SideBarLeft.vue  SideBarRight.vue
components/window-bar/: WindowBar.vue
directives/: clickOutSide-directive.ts
layouts/: layout-home.vue
middleware/: auth.ts  previous-url.global.ts
pages/: index.vue  login.vue
pages/home/: browse.vue  carousel.vue  download-manager.vue  library.vue
plugins/: clickOutSide-directive-plugin.ts
services/: TauriService.ts
src-common/components/buttons/: CrzButton.vue  CrzCheckbox.vue  CrzInput.vue  CrzSquareIconButton.vue
src-common/components/cards/: CrzGameCard.vue
src-common/components/core/: CrzSelect.vue
src-common/components/icons/: fix.vue  heart.vue  layers.vue  pause.vue  tool-tip.vue  wifi-off.vue
src-common/components/inputs/: CrzSearchBar.vue
src-common/components/loaders/: CrzSpinner.vue
src-common/components/modals/: CrzConfirmModal.vue  CrzModal.vue
src-common/components/ui/: CrzAvatar.vue  CrzBadge.vue  CrzCheckbox.vue  CrzIcon.vue  CrzPlatformIcon.vue  CrzPlatformsIcons.vue  platforms-icons.ts
src-common/core/loaders/: AuthLoader.ts  GameCarouselLoader.ts  GameLibraryLoader.ts  GameLoader.ts
src-common/core/models/: AuthModel.ts  BaseModel.ts  BucketModel.ts  FileModel.ts  GameBinaryModel.ts  GameCarouselModel.ts  GameCategoryModel.ts  GameConfigurationModel.ts  GameLanguageModel.ts  GameLibraryModel.ts  GameModel.ts  GamePlatformModel.ts  GameServerModel.ts  GameVersionModel.ts  LanguageModel.ts  ProductCategoryModel.ts  ProductDiscountModel.ts  ProductModel.ts  UserGameLibraryModel.ts  UserModel.ts  UserRoleModel.ts
src-common/core/services/: AuthService.ts  BaseApiService.ts  CloudStorageS3Service.ts  GameBinaryService.ts  GameCarouselService.ts  GameLibraryService.ts  GameService.ts  GameVersionService.ts  ProductService.ts  UserGameLibrariesService.ts
src-common/core/utils/: arrayUtils.ts  dateUtils.ts  s3Utils.ts
src-core/models/: UserGameWishlistModel.ts
src-core/services/: TauriService.ts
src-core/types/: ExtendedGameModel.ts  notify-types.d.ts
src-core/utils/: logger.ts
src-nuxt/: app.vue  error.vue
src-nuxt/assets/css/: main.scss  tailwind.css
src-nuxt/components/buttons/: PlayPauseButton.vue
src-nuxt/components/cards/: ActiveDownloadCard.vue  CompleteDownloadCard.vue
src-nuxt/components/carousel/: CrzSwiper.vue
src-nuxt/components/forms/: DownloadForm.vue  FixGameInstalledInLibraryForm.vue  LoginForm.vue  PlayGameNotFoundExecutableForm.vue
src-nuxt/components/loaders/: AutoUpdateLoader.vue
src-nuxt/components/login/: LoginLinks.vue
src-nuxt/components/menus/: EllipsisDropdownMenu.vue  UserMenu.vue
src-nuxt/components/modals/: DownloadModal.vue  FixGameInstalledInLibraryModal.vue  PlayGameNotFoundExecutableModal.vue
src-nuxt/components/navigations/: NavigationPages.vue  SideBarLeft.vue  SideBarRight.vue
src-nuxt/components/ui/: Divider.vue  ProgressBar.vue
src-nuxt/layouts/: layout-home.vue
src-nuxt/middleware/: auth.ts  navigation.ts  previous-url.global.ts
src-nuxt/pages/: index.vue  login.vue  offline.vue
src-nuxt/plugins/: clickOutSide-directive-plugin.ts  notify-plugin.ts  offline-detection-plugin.ts  tauri-events-plugin.ts  tauri-events.ts  tooltip-directive-plugin.ts
src-nuxt/stores/: app.store.ts  auth.store.ts  downloads.store.ts  game-carousel.store.ts  game.store.ts  gameCarousel.store.ts  gameLibrary.store.ts  navigation.store.ts  userGameLibraries.store.ts  window.store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: beforeBuildCommand.sh  beforeDevCommand.sh  beforeDevCommand.ts  mergeUpdateLauncherJSON.py
src-tauri/src/: lib.rs  main.rs
stores/: app.store.ts  auth.store.ts  downloads.store.ts  game-carousel.store.ts  game.store.ts  gameLibrary.store.ts  window.store.ts
tests/unit/: exemple.nuxt.spec.ts
types/: ExtendedGameModel.ts
utils/: bytesToSize.ts
(+5 files in other folders)
