[package]
name = "crzgames-launcher"
version = "0.0.0"
description = "Launcher for games"
authors = ["corentin recanzone"]
repository = "https://github.com/corentin35000/Crzgames_Launcher"
edition = "2021"
rust-version = "1.80.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.6", features = [ "macos-private-api", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-single-instance = "2.0.0-rc.0"
tauri-plugin-updater = "2.0.0-rc.1"
tauri-plugin-process = "2.0.0-rc.0"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.2"
tauri-plugin-log = { version = "2.0.0-rc.1", features = ["colored"] }
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.2"
tauri-plugin-shell = "2.0.0-rc.2"
tauri-plugin-autostart = "2.0.0-rc.0"
lazy_static = "1.5.0"
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sysinfo = "0.31.4"
reqwest = { version = "0.12.7", features = ["blocking"] }
flate2 = "1.0.32"
zip = "2.2.0"
dirs = "5.0.1"
futures = "0.3.30"
sha2 = "0.10.8"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"

# Server development
[profile.dev]
panic = "abort" # Éliminer la logique de nettoyage de panique coûteuse
opt-level = 0   # Moins d'optimisation pour un temps de compilation plus rapide et moins d'utilisation de mémoire

# Optimize build for Release
[profile.release]
panic = "abort"   # Éliminer la logique de nettoyage de panique coûteuse
codegen-units = 1 # Compiler les crates l'une après l'autre pour que le compilateur puisse optimiser mieux
lto = true        # Active les optimisations de link
opt-level = "s"   # Optimiser la taille du binaire
strip = true      # Supprimer automatiquement les symboles du binaire.
