[package]
name = "crzgames-launcher"
version = "0.0.0"
description = "Launcher for games"
authors = ["corentin recanzone"]
repository = "https://github.com/corentin35000/Crzgames_Launcher"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crzgames_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [ "macos-private-api", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-single-instance = "2.2.2"
tauri-plugin-updater = "2.5.1"
tauri-plugin-process = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-notification = "2.2.1"
tauri-plugin-log = { version = "2.2.3", features = ["colored"] }
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-autostart = "2.2.0"
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sysinfo = "0.33.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
flate2 = "1.1.0"
zip = "2.2.2"
dirs = "6.0.0"
futures = "0.3.31"
sha2 = "0.10.8"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"

# Server development
[profile.dev]
panic = "abort" # Éliminer la logique de nettoyage de panique coûteuse
opt-level = 0   # Moins d'optimisation pour un temps de compilation plus rapide et moins d'utilisation de mémoire

# Optimize build for Release
[profile.release]
panic = "abort"   # Éliminer la logique de nettoyage de panique coûteuse
codegen-units = 1 # Compiler les crates l'une après l'autre pour que le compilateur puisse optimiser mieux
lto = true        # Active les optimisations de link
opt-level = "s"   # Optimiser la taille du binaire
strip = true      # Supprimer automatiquement les symboles du binaire.
